2006-05-31  Kouhei Sutou  <kou@cozmixng.org>

	* README, packages/cairo/ext/extconf.rb: supported only 1.1.6 or
	higher.

	* packages/cairo/ext/rb_cairo_context.c: supported
	cairo_push_group(), cairo_push_group_with_content(),
	cairo_pop_group(), cairo_pop_group_to_source() and
	cairo_get_group_target().

	* packages/cairo/ext/rb_cairo_exception.c: supported
	CAIRO_STATUS_INVALID_DSC_COMMENT.

	* packages/cairo/ext/rb_cairo_surface.c: supported
	cairo_surface_get_device_offset().

2006-05-11  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/lib/cairo.rb: fixed typo.

2006-05-02  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo.c (Cairo::MINOR_VERSION): fixed
	cairo_version() decoding bug.

	* README, packages/cairo/ext/extconf.rb: supported only 1.1.2 or
	higher.

	* packages/cairo/ext/rb_cairo_surface.c: supported
	cairo_surface_get_type().

	* packages/cairo/ext/rb_cairo_scaled_font.c: supported
	cairo_scaled_font_get_type(), cairo_scaled_font_text_extents(),
	cairo_scaled_font_get_font_face(),
	cairo_scaled_font_get_font_matrix(),
	cairo_scaled_font_get_ctm() and
	cairo_scaled_Font_get_font_options().

	* packages/cairo/ext/rb_cairo_pattern.c: supported
	cairo_pattern_get_type().

	* packages/cairo/ext/rb_cairo_font_face.c: supported
	cairo_font_face_get_type().

	* packages/cairo/ext/rb_cairo_context.c: supported
	cairo_new_sub_path() and cr_set_scaled_font().

	* packages/cairo/ext/rb_cairo_constants.c: supported new enums.
	- cairo_font_type_t
	- cairo_surface_type_t
	- cairo_pattern_type_t
	- CAIRO_EXTEND_PAD

2006-05-01  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_surface.c: supported
	Cairo::SVGSurface.

	* samples/scalable.rb:
	- created by merging ps.rb, ps2.rb, pdf.rb and pdf2.rb.
	- added Cairo::SVGSurface example.
	* samples/ps.rb, samples/ps2.rb, samples/pdf.rb, samples/pdf2.rb:
	merged into scalable.rb.

	* samples/pac.rb, samples/pac2.rb: added Cairo::SVGSurface
	example.
