@@ -1,3 +1,8 @@
+2006-06-01  Kouhei Sutou  <kou@cozmixng.org>
+
+	* samples/text2.rb: added an example that output PS/PDF/SVG for
+	input text.
+
 2006-05-31  Kouhei Sutou  <kou@cozmixng.org>
 
 	* README, packages/cairo/ext/extconf.rb: supported only 1.1.6 or
